feat: :construction: Add HTML header layout
Added HTML layout for the header.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Title</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="div__logo">
+            <img src="storage/img/photo.png">
+        </div>
+        <div class="div__menu">
+            <ul class="ul__menu">
+                <li>Work</li>
+                <li>About</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
