--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Title</title>
 </head>
+
 <body>
+
+            <!--- Header --->
+
     <header class="header">
         <div class="div__logo">
             <img src="storage/img/photo.png">
@@ -18,5 +24,6 @@
             </ul>
         </div>
     </header>
+
 </body>
 </html>
