feat: :construction: Add HTML layout for main
Added HTML layout and the necessary images for main.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Title</title>
+    <title>Simple website design</title>
 </head>
 
 <body>
@@ -18,12 +18,36 @@
         </div>
         <div class="div__menu">
             <ul class="ul__menu">
-                <li>Work</li>
-                <li>About</li>
-                <li>Blog</li>
+                <li><a href="#_my_work">Work</a></li>
+                <li><a href="#my_about">About</a></li>
+                <li><a href="views/blog.html" target="_blank">Blog</a></li>
             </ul>
         </div>
     </header>
+
+        <!--- Main --->
+
+    <main class="main">
+        <section class="section__home">
+            <article class="article__home">
+                <span>Linus Kigai</span>
+                <h1>Bringing Concept to Life</h1>
+                <p>Lörem ipsum ditijybel beras fassade. Prel munira. Transperson bere då heterovalens. Kiling intraktig. Plasm ång refunde krobåling.</p>
+            </article>
+        </section>
+        <section class="section__ellipses">
+            <img src="storage/img/ellipse1.png">
+            <img src="storage/img/ellipse2.png">
+            <img src="storage/img/ellipse3.png">
+            <img src="storage/img/ellipse4.png">
+            <img src="storage/img/ellipse5.png">
+            <img src="storage/img/ellipse6.png">
+        </section>
+        <section id="my_about">
+            <h1>About</h1>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </section>
+    </main>
 
 </body>
 </html>
