feat: :construction: Add HTML layout for work
Added HTML layout and the necessary images for work.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         <div class="div__menu">
             <ul class="ul__menu">
-                <li><a href="#_my_work">Work</a></li>
+                <li><a href="#my_work">Work</a></li>
                 <li><a href="#my_about">About</a></li>
                 <li><a href="views/blog.html" target="_blank">Blog</a></li>
             </ul>
         </div>
     </header>
 
-        <!--- Main --->
+            <!--- Main --->
 
     <main class="main">
         <section class="section__home">
@@ -43,9 +43,20 @@
             <img src="storage/img/ellipse5.png">
             <img src="storage/img/ellipse6.png">
         </section>
-        <section id="my_about">
-            <h1>About</h1>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+                <!--- Work --->
+
+        <section id="my_work" class="section__firstwork">
+            <img src="storage/img/rectangle1.png">
+            <p>URBAN PLANNING</p>
+        </section>
+        <section class="section__secondwork">
+            <img src="storage/img/rectangle2.png">
+            <p>GRAPHICS DESIGN</p>
+        </section>
+        <section class="section__thirdwork">
+            <img src="storage/img/rectangle3.png">
+            <p>ART</p>
         </section>
     </main>
 
