feat: :recycle: Optimized work section restructuring
Optimized restructuring of the work section & divs addition.

--- a/index.html
+++ b/index.html
@@ -46,17 +46,23 @@
 
                 <!--- Work --->
 
-        <section id="my_work" class="section__firstwork">
-            <img src="storage/img/rectangle1.png">
-            <p>URBAN PLANNING</p>
+        <section id="my_work" class="section__work">
+            <div class="container">
+                <img src="storage/img/rectangle1.png">
+                <p>URBAN PLANNING</p>
+            </div>
         </section>
-        <section class="section__secondwork">
-            <img src="storage/img/rectangle2.png">
-            <p>GRAPHICS DESIGN</p>
+        <section class="section__work">
+            <div class="container">
+                <img src="storage/img/rectangle2.png">
+                <p>GRAPHICS DESIGN</p>
+            </div>
         </section>
-        <section class="section__thirdwork">
-            <img src="storage/img/rectangle3.png">
-            <p>ART</p>
+        <section class="section__work">
+            <div class="container">
+                <img src="storage/img/rectangle3.png">
+                <p>ART</p>
+            </div>
         </section>
     </main>
 
