feat: :construction: Add HTML layout for Carousel
Added HTML layout and the necessary variables & images for carousel.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="div__menu">
             <ul class="ul__menu">
-                <li><a href="#my_work">Work</a></li>
-                <li><a href="#my_about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="views/blog.html" target="_blank">Blog</a></li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
 
                 <!--- Work --->
 
-        <section id="my_work" class="section__work">
+        <section id="work" class="section__work">
             <div class="container">
                 <img src="storage/img/rectangle1.png">
                 <p>URBAN PLANNING</p>
@@ -62,6 +62,53 @@
             <div class="container">
                 <img src="storage/img/rectangle3.png">
                 <p>ART</p>
+            </div>
+        </section>
+
+                <!--- Carousel --->
+
+        <section id="about" class="section__about">
+            <p>Latset Blog</p>
+        </section>
+
+        <section class="section__carousel">
+            <div class="section__box">
+                <img src="storage/img/rectangle4.png">
+                <h1>Lörem ipsum patt kar i renyst</h1>
+                <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
+                <button>Read More</button>
+            </div>
+        </section>
+        <section class="section__carousel">
+            <div class="section__box">
+                <img src="storage/img/rectangle5.png">
+                <h1>Lörem ipsum patt kar i renyst</h1>
+                <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
+                <button>Read More</button>
+            </div>
+        </section>
+        <section class="section__carousel">
+            <div class="section__box">
+                <img src="storage/img/rectangle6.png">
+                <h1>Lörem ipsum patt kar i renyst</h1>
+                <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
+                <button>Read More</button>
+            </div>
+        </section>
+        <section class="section__carousel">
+            <div class="section__box">
+                <img src="storage/img/rectangle7.png">
+                <h1>Lörem ipsum patt kar i renyst</h1>
+                <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
+                <button>Read More</button>
+            </div>
+        </section>
+        <section class="section__carousel">
+            <div class="section__box">
+                <img src="storage/img/rectangle8.png">
+                <h1>Lörem ipsum patt kar i renyst</h1>
+                <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
+                <button>Read More</button>
             </div>
         </section>
     </main>
