feat: :recycle: Optimized div rename
Optimized restructuring of divs in work and corousel.

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                 <!--- Work --->
 
         <section id="work" class="section__work">
-            <div class="container">
+            <div class="div__container">
                 <img src="storage/img/rectangle1.png">
                 <p>URBAN PLANNING</p>
             </div>
         </section>
         <section class="section__work">
-            <div class="container">
+            <div class="div__container">
                 <img src="storage/img/rectangle2.png">
                 <p>GRAPHICS DESIGN</p>
             </div>
         </section>
         <section class="section__work">
-            <div class="container">
+            <div class="div__container">
                 <img src="storage/img/rectangle3.png">
                 <p>ART</p>
             </div>
@@ -72,7 +72,7 @@
         </section>
 
         <section class="section__carousel">
-            <div class="section__box">
+            <div class="div__box">
                 <img src="storage/img/rectangle4.png">
                 <h1>Lörem ipsum patt kar i renyst</h1>
                 <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
@@ -80,7 +80,7 @@
             </div>
         </section>
         <section class="section__carousel">
-            <div class="section__box">
+            <div class="div__box">
                 <img src="storage/img/rectangle5.png">
                 <h1>Lörem ipsum patt kar i renyst</h1>
                 <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
@@ -88,7 +88,7 @@
             </div>
         </section>
         <section class="section__carousel">
-            <div class="section__box">
+            <div class="div__box">
                 <img src="storage/img/rectangle6.png">
                 <h1>Lörem ipsum patt kar i renyst</h1>
                 <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
@@ -96,7 +96,7 @@
             </div>
         </section>
         <section class="section__carousel">
-            <div class="section__box">
+            <div class="div__box">
                 <img src="storage/img/rectangle7.png">
                 <h1>Lörem ipsum patt kar i renyst</h1>
                 <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
@@ -104,7 +104,7 @@
             </div>
         </section>
         <section class="section__carousel">
-            <div class="section__box">
+            <div class="div__box">
                 <img src="storage/img/rectangle8.png">
                 <h1>Lörem ipsum patt kar i renyst</h1>
                 <p>Lörem ipsum patt kar i renyst robotfälla. Tregyktig sana, nuktigt i mandatpingis tes. Analigt anede. Arat lagen</p>
